--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-	- Huge refactoring and redesign of twitch
+	- Huge refactoring and redesign of twitch (pre-v1, still in test)
 
 0.006     2010-11-14 00:06:09 Europe/Berlin
 	- Implemented ignore_first, removed name setting on the feed
