--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	- Many tuning on layout and POE performance
 
 0.901     2011-02-04 19:12:17 Europe/Berlin
 
